--- a/assts/asst05.adoc
+++ b/assts/asst05.adoc
@@ -8,13 +8,13 @@ include::header.adoc[]
 
 = {title}
 
-**Due Thursday, Oct 20, before midnight**
+**Due Wednesday, Feb 23, before midnight**
 
 The goals for this assignment are:
 
-* Directly manipulate basic types at the bit level using masks
-* Directly manipulate basic types at the bit level
-* Work with binary files
+* Work with 2D arrays
+* Use malloc and free
+* Read and write binary files
 
 **All programs must run without memory errors and leaks!**
 
@@ -51,36 +51,178 @@ The `fetch` and `merge` commands update your repository with any changes from th
 
 :sectnums:
 
-= Tiny Bitmaps
+= Crossword
 
-A link:https://sneslab.net/wiki/Graphics_Format[1bpp], or 1-bit-per-pixel, 
-sprite stores a grid of black and white pixels using a single bit. 0 denotes 
-white and 1 denotes black. 
-
-image::https://sneslab.net/mw/images/c/c6/saa03_1bpp.png[width=400px] 
-
-In the program, `bitmap.c`, implement a program that reads in a single 64-bit 
-unsigned integer (e.g. `unsigned long`) and outputs it as an 8x8 1bpp sprite. 
+Implement a program, `crossword.c`, that generates a crossword using two words from 
+a user. Your program should create a 2D array of characters to hold your crossword puzzle. 
+Your algorithm should identify a common letter between the given words and list one word 
+vertically and the other word horizontally. If there is no common letter, place both 
+words so they are disconnected within the grid.
 
 [source,subs="quotes"]
-$ **./bitmap < bitmap1.txt**
-Image (unsigned long): ff818181818181ff
-@ @ @ @ @ @ @ @
-@             @
-@             @
-@             @
-@             @
-@             @
-@             @
-@ @ @ @ @ @ @ @
+----
+$ **make crossword**
+gcc -g -Wall -Wvla -Werror crossword.c -o crossword
+$ **./crossword elephant opinion**
+
+$ **./crossword elephant zoo**
 ----
 
 Requirements/Hints:
 
-* Your program should *must* use a bitmask! For example, to generate a 64-bit mask that obtains the left-most bit, do `0x1ul << 63`. The `ul` indicates an `unsigned long` value. `0x1` is the number one in hexadecimal.
-* The bitmap files store the values as hexadecimal values. To read them in, do `unsigned long img; scanf(" %lx", &img);`. Use `%lx` for printf also. You are given basecode that reads in the long integer from stdin.
+* Use malloc and free to allocate a 2D array to store the grid.
+* Your program must use command line arguments!
+* Your program should print the results so that the words are properly aligned.
+* For extra challenge, try to support more than two words!
 
-= Write PPM
+NOTE: To read in link:https://diveintosystems.org/book/C2-C_depth/advanced_cmd_line_args.html#_c_cmd_line_args_[command line arguments], define main with argc and argv parameters 
+as follows. The first command line argument is always the program name. `argc` is 
+the number of arguments. You can use `atoi` and `atof` to convert from strings 
+to numeric types (int and float respectively)
+[source]
+----
+int main(int argc, char** argv) {
+  if (argc != 4) {
+    printf("usage: %s m n p\n", argv[0]);
+  }
+  
+  return 0;
+}
+----
+
+= PPM
+
+Implement two functions, `read_ppm` and `write_ppm`, that read and write binary PPM files. 
+This functions are implemented in the file `load_ppm.h` and tested using code in `test_ppm.c`.
+
+== Background
+
+link:http://netpbm.sourceforge.net/doc/ppm.html[PPM (Portable Pix Map)]
+ is an image file format that stores the colors of an image as a 2D array of 
+colors. Each color is represented as a RGB triplet, representing red, green and blue respectively. 
+The properties of the image, such as its size and color format, are specified at the start of the 
+file (called its "header information"). PPM supports both ASCII (plain text) and binary data (raw). 
+
+We will write a funtion that *reads PPM files in binary format*!
+
+For example, consider the following image
+
+image::https://www.cs.swarthmore.edu/~soni/cs35/f13/Labs/images/01/example5000.png[]
+
+//In ASCII format, the above image is stored as follows. To see for yourself, do `cat feep-ascii.ppm`.
+//[source]
+//----
+//P3
+//# This is a comment
+//4 4
+//255
+//0  0  0   100 0  0       0  0  0    255   0 255
+//0  0  0    0 255 175     0  0  0     0    0  0
+//0  0  0    0  0  0       0 15 175    0    0  0
+//255 0 255  0  0  0       0  0  0    255  255 255
+//----
+
+The above image contains a 4x4 grid of colored pixels. Each pixel is a triplet of red-blue-green (RGB) color 
+values, each stored as an `unsigned char`. Unsigned chars have values which range from 0 to 255, where 
+smaller values correspond to darker colors. The triplet (0,0,0) corresponds to black. The triplet 
+(255,255,255) cooresponds to white. The triplet (255,0,0) corresponds to red. This system of colors is called 
+the link:https://en.wikipedia.org/wiki/RGB_color_model[RGB Color Model] and it is a common standard for 
+representing colors on a computer. 
+
+The RGB colors for the pixels in the above image are as follows
+
+[source]
+----
+(0,0,0)      (100,0,0)    (0,0,0)     (255,0,255)
+(0,0,0)      (0,255,175)  (0,0,0)     (0,0,0)
+(0,0,0)      (0,0,0)      (0,15,175)  (0,0,0)
+(255,0,255)  (0,0,0)      (0,0,0)     (255,255,255)
+----
+
+In binary format (also called _raw_ format), the image is stored as follows. 
+To see for yourself, do `hexedit feep-raw.ppm`.
+
+[source]
+----
+00000000   50 36 0A 23  20 43 72 65  61 74 65 64  20 62 79 20  47 49 4D 50  20 76 65 72  P6.# Created by GIMP ver 
+00000018   73 69 6F 6E  20 32 2E 31  30 2E 32 34  20 50 4E 4D  20 70 6C 75  67 2D 69 6E  sion 2.10.24 PNM plug-in
+00000030   0A 34 20 34  0A 32 35 35  0A 00 00 00  64 00 00 00  00 00 FF 00  FF 00 00 00  .4 4.255....d...........
+00000048   00 FF AF 00  00 00 00 00  00 00 00 00  00 00 00 00  0F AF 00 00  00 FF 00 FF  ........................
+00000060   00 00 00 00  00 00 FF FF  FF                                                  .........
+----
+
+The leftmost column is byte number in hexidecimal. For example, 0x18 is 24 in decimal. There are 24 bytes
+on the first row on output. The rightmost column displays the raw data in ASCII, using `.` for non-visible 
+ASCII codes, such as '\0' and 'Escape'.
+
+Regardless of format, every PPM file starts the following information in its header. 
+
+* A "magic number" indicating the type of PPM. Binary types start with "P6".
+* Whitespace  (blanks, tabs, \n, \r, etc)
+* Width and height as ASCII decimal integers (separated by whitespace)
+* Maximum color value as an ASCII decimal integer. *You can assume the Maxval is less than 256, meaning each RGB value is 1 byte.*
+* A single whitespace character
+* A raster (e.g. the array of pixels) of Height number of rows and Width number of columns, in order from top to bottom. 
+
+PPM images may contain comments in their header. These must be on their own line and start with the symbol `#`.
+
+NOTE: The header information is always in plain text. It is only the pixel data that differs between ASCII and raw formats. 
+
+NOTE: PPM files can be viewed using tools such as Photoshop and Gimp.
+
+== Read PPM
+
+
+For this question, you will implement a function, `read_ppm()`, that can read
+PPM files stored in _binary_ format. This function should take a filename as input
+and return a 2D array of `struct pixel`. A `struct pixel` has the following definition
+
+[source]
+----
+struct ppm_pixel {
+    unsigned char red;
+    unsigned char green;
+    unsigned char blue;
+};
+----
+
+The user of the function `read_ppm` is reponsible for freeing the memory allocated by this function.
+
+You will re-use this function throughout the semester. For this reason, we place its implementation
+in it's own file, `read_ppm.c`, and use a header file, `read_ppm.h`, to include it in our main application.
+
+You may implement your 2D array of pixels as either a flat array or an array or
+arrays. For example, if you return a flat array, your function should be defined
+as `struct ppm_pixel* read_ppm(const char* filename, int* width, int* height)`.
+If you return an array or arrays, your function should be defined as  `struct
+ppm_pixel** read_ppm(const char* filename, int* width, int* height)`. In both cases, 
+use the parameters `width` and `height` to return the width and height of the image.
+
+In the file, `test_ppm.c`, write a short test that calls your function and prints the
+contents of `feep-ascii.ppm` like so:
+
+[source,subs="quotes"]
+----
+$ **make test_ppm**
+gcc -g -Wall -Wvla -Werror test_ppm.c read_ppm.c -o test_ppm
+$ **./test_ppm**
+Testing file feep-raw.ppm: 4 4
+(0,0,0) (100,0,0) (0,0,0) (255,0,255)
+(0,0,0) (0,255,175) (0,0,0) (0,0,0)
+(0,0,0) (0,0,0) (0,15,175) (0,0,0)
+(255,0,255) (0,0,0) (0,0,0) (255,255,255)
+----
+
+Requirements/Hints:
+
+* Your function should return NULL if the filename is invalid
+* Your function should return NULL if memory cannot be allocated for the image data
+* Your function should return a pointer to the array you create in read_ppm
+* You can assume that it is safe to read the header line by line (e.g. using `fgets`).
+* Don't forget to free your data!
+
+
+== Write PPM
 
 Implement a new function, `write_ppm`, defined in `write_ppm.c`. 
 Similarly to link:asst04.html[Assignment 04], you should choose one definition of `write_ppm` to 
@@ -106,45 +248,6 @@ Requirements/Hints:
 
 * Use `fprintf` to write the header and `fwrite` to write the binary Data to your file.
 
-= Glitch
-
-link:https://en.wikipedia.org/wiki/Glitch_art[Glitch Art] is the practice of leveraging technological errors for artistic purposes. Some cool examples can be found here by link:https://mobile.twitter.com/glitchartbot[glitchartbot].
-
-image::https://www.joelatimer.com/wp-content/uploads/2019/09/JoeLatimer.com-Blog-Featured-Image-Landscape-08-31-19.jpg[height=300px]
-
-Then write a program, `glitch.c`, that reads in a PPM file and "glitches" it. Your program should save the modified PPM in a new file with the suffix "-glitch". For example, if you load in the file 
-"monalisa.ppm", you should output a file named "monalisa-glitch.ppm".
-
-[source,subs="quotes"]
-----
-$ **./glitch monalisa.ppm**
-Reading monalisa.ppm with width 606 and height 771
-Writing file monalisa-glitch.ppm
-----
-
-[cols="1a,1a"]  
-|=== 
-|Original Image | Glitched Image
-|image::monalisa.png[height=300px]
-|image::monalisa-glitch-v2.0.png[height=300]
-|=== 
-
-
-Requirements/Hints:
-
-* Save the result to `<filename>-glitch.ppm`
-* To start, implement a minimal glitch, which shifts each color value by either 1 or 2 bits, choosen at random, e.g. `newcolorvalue = oldcolorvalue << (rand() % 2);`. Your result should look like
-* Submit your glitched images as part of your submission!
-
-[cols="1a,1a"]  
-|=== 
-|Original Image | Result of random bit shift
-|image::monalisa.png[height=300px]
-|image::monalisa-glitch-simple.png[height=300]
-|=== 
-
-Feel free to be creative with your glitches. You can use a combination of bit operations, switching colors, adding colors, etc.  Anything goes! Also, feel free to use your own images. PPM images can be exported using link:https://www.gimp.org[Gimp] or Photoshop.
-
 = Submit your work
 
 Push you work to github to submit your work.
@@ -160,3 +263,31 @@ $ git status
 $ git push
 $ git status
 ----
+
+
+= Grading Rubric
+
+*Assignment rubrics*
+
+Grades are out of 4 points.
+
+* (2 points) crossword
+** (0.1 points) style and header comment
+** (0.9 points) correct behavior: asks the user for input and creates the new string
+** (1.0 points) no memory errors
+* (2 points) most danceable
+** (0.1 points) style and header comment
+** (0.2 points) defines a struct, reads and parses songlist.csv correctly, and has correct user input
+** (0.7 points) correctly handles deletion and insertion to a linked list
+** (1.0 points) creates and free linked list nodes correctly
+
+*Code rubrics*
+
+For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and 
+have good style.
+
+* Some credit lost for missing features or bugs, depending on severity of error
+* -5% for style errors. See the link:../codingstandard.html[class coding style] here.
+* -50% for memory errors
+* -100% for failure to checkin work to Github
+* -100% for failure to compile on linux using make
