--- a/assts/asst01.adoc
+++ b/assts/asst01.adoc
@@ -5,6 +5,7 @@ include::header.adoc[]
 :Date:    2020-08-15
 :Revision: 0.1
 :ASST: A01
+:repo: https://github.com/BrynMawr-CS223-S23/
 
 = {title}
 
@@ -77,7 +78,7 @@ machine if you have setup your development environment there.
 
 Fork the repository from here: 
 
-link:https://github.com/BrynMawr-CS223-S23/cs223-assignments[]
+link:{repo}/cs223-assignments[]
 
 Fork is a button located on the top, right on Github.
 
