--- a/index.adoc
+++ b/index.adoc
@@ -14,9 +14,9 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Current Agenda: link:#week05[Week 05]
-* link:assts/asst04.html[Assignment 04]: *Due Feb 15th*. 
+* Current Agenda: link:#week07[Week 07]
 * link:assts/asst05.html[Assignment 05]: *Due Feb 22nd*. 
+* link:assts/asst06.html[Assignment 06]: *Due March 1st*. 
 
 == Course Info
 
