--- a/index.adoc
+++ b/index.adoc
@@ -15,8 +15,8 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 [.anns]
 
 * Current Agenda: link:#week07[Week 07]
-* link:assts/asst05.html[Assignment 05]: *Due Feb 22nd*. 
 * link:assts/asst06.html[Assignment 06]: *Due March 1st*. 
+* link:assts/asst07.html[Assignment 07]: *Written! Due March 15th In Class!*. 
 
 == Course Info
 
