--- a/schedule.adoc
+++ b/schedule.adoc
@@ -88,7 +88,7 @@
 |March 13,15 anchor:week09[]
 |*The operating system, Processes* 
 
-* link:assts/asst07.html[Assignment 07]: Due March 15
+* link:assts/asst07.html[Assignment 07]: Due March 15 **Hardcopy due in class!**
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
 
 //-----------------------------
